--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ before_script:
   - ./travis-tool.sh install_github gmbecker/switchr
   - 
   - echo "Session info:"
-  - Rscript -e "options(repos=c(CRAN='http://cran.rstudio.org'));library(${PKG_NAME});library(switchr); man = libManifest(); swpublishManifest(man)"
+  - Rscript -e "options(repos=c(CRAN='http://cran.rstudio.org'));library(${PKG_NAME});library(switchr); man = libManifest(); publishManifest(man)"
   - ECHO "*** Start package manifest ***"
-  - cat pkg_manifest.rman
+  - cat ./pkg_manifest.rman
   - ECHO "*** End package manifest ***"
