--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,6 @@ before_script:
   - 
   - echo "Session info:"
   - Rscript -e "options(repos=c(CRAN='http://cran.rstudio.org'));library(${PKG_NAME});library(switchr); man = libManifest(); publishManifest(man, './travisbld.rman')"
-  - ECHO "*** Start package manifest ***"
+  - echo "*** Start package manifest ***"
   - cat ./travisbld.rman
-  - ECHO "*** End package manifest ***"
+  - echo "*** End package manifest ***"
